# EasyTrackManipulator

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioProcessing.cpp
app/src/main/java/com/Simoorg/EasyTrackManipulator/: EQActivity.java  MainActivity.java  SplashScreenActivity.java
app/src/main/res/layout/: activity_eq.xml  activity_main.xml  activity_splash_screen.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
